ProjetCompil/Verif/Test/fail/typeNonCompatible17.cas
program
	A : array [1..14] of integer;
	B : array [1..14] of integer;
	C : real;
begin
	C := A + B;
end.
	
